Criando a localizacao da pessoa por IP e a internacionalizacao

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,27 @@
 
 en:
   hello: "Hello world"
+  portuguese: "Portuguese"
+  howitworks: "How it works"
+  ridesharing: "Ridesharing"
+  cabsharing: "Cabsharing"
+  toparties: "to parties"
+  first_title: "Levar.me connects to your Facebook and uses your friend list to find the cheapest way to the event"
+  inset_email: "Insert your email to join the beta"
+  join: "Join"
+  tap_event: "Tap on the event"
+  see_who: "and see who else is going"
+  levar_shows: "Levar shows which of your friends and their friends are going."
+  tap_someone: "Tap on someone you find interesting and decide if you're getting a ride or sharing a cab."
+  thats_it: "That's it! You're well on your way to enjoying a car or cab filled with interesting people."
+  cheaper: "It's cheaper"
+  experience: "and an experience"
+  however_decide: "However you decide to get there, we're happy you'll be having a cheaper and more fulfilling experience"
+  by_connecting: "By connecting to your Facebook, you'll be shown friends, and friends of friends, so you'll feel safer and have an ice-breaker"
+  sharing_cab: "Sharing a cab ride, or sharing someone's car you'll be part of a tight trusting community."
+  sounds_fun: "That sounds so much fun"
+  offer_rides: "I want to offer rides."
+  drivers_welcome: "Drivers are always welcome, and they'll be a rockstar for the night."
+  gone_out: "We've gone out of our way to partner with the biggest brands to make sure you get the ultimate VIP experience"
+  interested: "Interested? Drop us a line at awesome@levar.me"
+  english: "English"
