Mudando analytics e trecho de texto em inglês

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,7 +21,7 @@ en:
   however_decide: "However you decide to get there, we're happy you'll be having a cheaper and more fulfilling experience"
   by_connecting: "By connecting to your Facebook, you'll be shown friends, and friends of friends, so you'll feel safer and have an ice-breaker"
   sharing_cab: "Sharing a cab ride, or sharing someone's car you'll be part of a tight trusting community."
-  sounds_fun: "That sounds so much fun"
+  sounds_fun: "That sounds like so much fun"
   offer_rides: "I want to offer rides."
   drivers_welcome: "Drivers are always welcome, and they'll be a rockstar for the night."
   gone_out: "We've gone out of our way to partner with the biggest brands to make sure you get the ultimate VIP experience"
