alteracoes das imagens e texto brasileiro

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -6,26 +6,26 @@ pt:
   portuguese: "Português"
   howitworks: "Como funciona"
   ridesharing: "TEM UM EVENTO"
-  cabsharing: "HOJE A NOITE"
+  cabsharing: "HOJE À NOITE"
   toparties: "E NÃO SABE COMO IR?"
-  first_title: "Levar.me é o aplicativo que mostra quem da sua rede de amigos vai para o mesmo evento que você"
+  first_title: "Levar.me é o aplicativo que conecta ao seu Facebook e usa sua lista de amigos para arrumar o caminho mais divertido para o evento"
   inset_email: "Insira seu e-mail para usar a versão beta"
   join: "Inserir"
-  tap_event: "Escolha um evento"
-  see_who: "e veja quem mais está indo"
-  levar_shows: "Levar mostra amigos e amigos de amigos que também vão a festa."
-  tap_someone: "Escolha alguém interessante e decidam se vai rolar carona, ou se racharão um taxi."
-  thats_it: "E é isso! Você já esta a caminho para um trajeto mais barato e interessante!"
-  cheaper: "É mais barato"
-  experience: "e você conhecerá pessoas novas e interessantes"
+  tap_event: "Veja"
+  see_who: "quem mais está indo"
+  levar_shows: "Escolha um evento e descubra quem está oferendo carona ou querendo rachar um taxi."
+  tap_someone: ""
+  thats_it: ""
+  cheaper: "É o jeito mais barato de chegar"
+  experience: "cheio de gente nova para você conhecer!"
   however_decide: "Carona ou taxi, estamos felizes em saber que você vai economizar dinheiro e fazer novos amigos"
-  by_connecting: "O Levar é totalmente integrado ao Facebook, nós vamos lhe mostrar apenas amigos ou amigos em comum que irão ao evento.  Você se sentirá mais seguro e também vai saber como quebrar o gelo"
-  sharing_cab: "Você fará parte de uma comunidade grande e unida."
-  sounds_fun: "Que maneiro!"
+  by_connecting: "O Levar é totalmente integrado ao Facebook, nós vamos lhe mostrar apenas amigos e os amigos deles que irão ao evento."
+  sharing_cab: "Levar.me é uma comunidade de pessoas que querem aproveitar os melhores eventos com segurança."
+  sounds_fun: "Maneiro!"
   offer_rides: "Quero oferecer carona!"
-  drivers_welcome: "Motoristas são super bem vindos, e por isso garantimos que voce sera tratado como um rei/gorila/princesa."
+  drivers_welcome: "Motoristas são super bem vindos, garantimos que você sera tratado como um rei/gorilão/princesa/mestredosmagos."
   gone_out: "Nós fechamos parcerias com algumas das maiores marcas e casas de festa para garantir a você, o motorista, a noite mais épica."
-  interested: "Se interessou? Nos envie um email: awesome@levar.me"
+  interested: "Se interessou? Envie um email: digdin@levar.me"
   english: "Inglês"
   iphone1: "/assets/f2-port.png"
   iphone2: "/assets/f3-port.png"
