--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -32,6 +32,6 @@ pt:
   iphone3: "/assets/f4-port.png"
   success: "Legal! Já já te enviaremos um e-mail"
   error: 'Este e-mail não é válido. Por favor, informe um e-mail válido.'
-  insert_email: "Cadastre-se para a versão beta"
+  insert_email: "Cadastre seu e-mail"
   join: "Cadastrar"
   period: ""
