--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -5,27 +5,27 @@ pt:
   hello: "Olá Mundo"
   portuguese: "Português"
   howitworks: "Como funciona"
-  ridesharing: "TEM UM EVENTO"
-  cabsharing: "HOJE À NOITE"
-  toparties: "E NÃO SABE COMO IR?"
-  first_title: "Levar.me é o aplicativo que conecta ao seu Facebook e usa sua lista de amigos para arrumar o caminho mais divertido para o evento"
+  ridesharing: "Chegue na festa"
+  cabsharing: "economizando dinheiro"
+  toparties: "e fazendo novos amigos"
+  first_title: "Levar.me é o aplicativo que conecta ao seu Facebook e usa sua lista de amigos para arrumar uma carona ou alguem para rachar um taxi"
   inset_email: "Insira seu e-mail para usar a versão beta"
   join: "Inserir"
-  tap_event: "Veja"
-  see_who: "quem mais está indo"
-  levar_shows: "Escolha um evento e descubra quem está oferendo carona ou querendo rachar um taxi."
+  tap_event: "Escolha a festa"
+  see_who: "ou evento"
+  levar_shows: "Encontre todas as festas acontecendo em volta de você."
   tap_someone: ""
   thats_it: ""
-  cheaper: "É o jeito mais barato de chegar"
-  experience: "cheio de gente nova para você conhecer!"
-  however_decide: "Carona ou taxi, estamos felizes em saber que você vai economizar dinheiro e fazer novos amigos"
-  by_connecting: "O Levar é totalmente integrado ao Facebook, nós vamos lhe mostrar apenas amigos e os amigos deles que irão ao evento."
-  sharing_cab: "Levar.me é uma comunidade de pessoas que querem aproveitar os melhores eventos com segurança."
-  sounds_fun: "Maneiro!"
-  offer_rides: "Quero oferecer carona!"
-  drivers_welcome: "Motoristas são super bem vindos, garantimos que você sera tratado como um rei/gorilão/princesa/mestredosmagos."
+  cheaper: "Veja que amigos "
+  experience: "e os amigos deles também estão indo"
+  however_decide: "O Levar irá apenas mostrar amigos e amigos de amigos que estão próximos a você."
+  by_connecting: "Acreditamos que isso melhorará não só a sua experiencia, mas tambem proporcionará maior segurança e conforto."
+  sharing_cab: ""
+  sounds_fun: "Resta decidir se você prefere rachar um taxi "
+  offer_rides: "ou uma carona"
+  drivers_welcome: "Achou alguem legal?  O Levar disponibiliza um chat para que vocês possam se organizar melhor."
   gone_out: "Nós fechamos parcerias com algumas das maiores marcas e casas de festa para garantir a você, o motorista, a noite mais épica."
-  interested: "Se interessou? Envie um email: digdin@levar.me"
+  interested: "Se interessou? Envie um email: jonathan@levar.me"
   english: "Inglês"
   iphone1: "/assets/g1.png"
   iphone2: "/assets/g2.png"
